# neganuki

./: .czrc  .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup-semantic-commits.sh  setup-system-deps.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
backend/camera/: __init__.py  imx477.py
backend/fsm/: __init__.py  scanner_fsm.py  states.yaml
backend/grpc/: codegen.py  launcher.py  scanner.proto  server.py
backend/motor/: __init__.py  stepper.py
backend/pipeline/: __init__.py  controller.py  crop.py  evaluator.py  stitcher.py
client/neganuki-ui/: README.md  scanner_gui.py
clients/neganuki-terminal/: README.md  index.html  interactive_scanner.py  mjpeg_preview.py  scanner_client.py  simple_scan.py
clients/neganuki-ui/: requirements.txt  scanner_gui.py
decoupled/: README.md  pyproject.toml
decoupled/src/decoupled_algorithms/: __init__.py  scan.py
docs/: README.md  REORGANIZATION.md
docs/semantic-commits/: SEMANTIC_COMMITS.md
