[tool.poetry]
name = "neganuki-decoupled"
version = "0.1.0"
description = "Algorithm prototyping workspace for perspective alignment, homography, and stitching experiments."
authors = ["egxn"]
readme = "README.md"
packages = [{ include = "decoupled_algorithms", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^2.3.5"
opencv-python = "^4.9.0"
pillow = "^10.0.0"
tifffile = "^2025.10.16"
rawpy = "^0.25.1"

# Recommended extras for advanced experiments
scipy = { version = "^1.13.0", optional = true }
scikit-image = { version = "^0.25.0", optional = true }
matplotlib = { version = "^3.9.0", optional = true }

[tool.poetry.extras]
image-science = ["scipy", "scikit-image"]
visualization = ["matplotlib"]

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
